# data-quality

./: README.md  env.example  parsing_manual.ipynb  pyproject.toml  test_expectations.ipynb
configs/: config.py
great_expectations_snowflake/: GE_PythonSP.ipynb  Makefile
great_expectations_snowflake/src/: Expectations.py
snowflake_mongodb_checks/: SP.sql  alerts.sql  config_tables.sql  tasks.sql
src/: parsing.py
